New in development branch:
  * turbo_eels code of TDDFPT module now works with ultrasoft pseudopotentials
    and spin-orbit coupling together (Oleksandr Motornyi, Andrea Dal Corso,
    Nathalie Vast). lr_sm1_psi.f90 of LR_Modules is rewritten and simplified.

Problems fixed in development branch :
  * at2celldm wasn't properly converting vectors into celldm parameters
    in the ibtrav=91 case (Tone)
  * PP: plot_num=1 wasn't working any longer as expected due to forgotten 
    local potential term (noticed by Manoar Hossain, NISER)
  * DOS calculation wasn't honoring "bz_sum='smearing'" if the nscf 
    calculation was performed with tetrahedra, contrary to what stated
    in the documentation (noticed by Mohammedreza Hosseini, Modares Univ.)
  * Time reversal symmetry in tetrahedron routine incorrectly detected
    after a restart in phonon (reported by T. Tadano)
  * pp.x with plot_num=11 in spin-polarized case was issuing a segmentation
    fault error (noticed by Mauricio Chagas da Silva)
  * pp.x with plot_num=17 in spin-polarized case was issuing a bogus 
    error (noticed by Shoaib Muhammad, Sungkyunkwan U.)
  * vc-relax with cell_dofree='z' wasn't working exactly as expected
    (noticed by Daniel Marchand, fixed by Lorenzo Paulatto)
  * Incorrect link to wannier90 package (thanks to Nikolas Garofil)
  * Bug in spin-polarized meta-GGA (noticed by Shoaib Muhammad, 
    Sungkyunkwan U.)
  * Unphysical fractional translations (tau/n with n/=2,3,4,6) were not 
    explicitly discarded, thus leading in unfortunate cases to strange
    values for FFT factors and grids. Also: if "nosym" is true, inversion
    symmetry flag (invsym) and info on FFT factors (fft_fact) must also
    be reset (problem spotted by Thomas Brumme, Leipzig)
  * PPACF wasn't working any longer in v.6.4 and 6.4.1 for nspin=2 and
    for hybrid functionals (fixed by Yang Jiao, Chalmers)
  * option "write_unkg" of pw2wannier90.f90 wasn't working as expected